--- a/.gitignore
+++ b/.gitignore
@@ -2,5 +2,6 @@ node_modules
 # FFmpeg binaries
 src/layers/resource-layer/opt/ffmpeg/*
 !src/layers/resource-layer/opt/ffmpeg/.gitkeep
+notes
 
-src/utils/temp.ts
+/src/workers
