--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "media-relay",
-    "description": "A Serverless & Loosely Coupled Video Transcoding & Delivery Project",
+    "description": "A Serverless & Loosely Coupled -> Video Transcoding & Delivery Project",
     "version": "0.0.1",
     "private": true,
     "devDependencies": {
@@ -15,17 +15,10 @@
         "@ffmpeg-installer/ffmpeg": "^1.1.0",
         "@types/aws-lambda": "^8.10.147",
         "@types/fluent-ffmpeg": "^2.1.27",
-        "@types/jest": "^29.5.14",
         "@types/node": "^22.10.5",
-        "aws-sdk-mock": "^6.2.1",
-        "dotenv": "^16.4.7",
-        "esbuild": "^0.24.2",
         "fluent-ffmpeg": "^2.1.3",
         "install": "^0.13.0",
-        "jest": "^29.5.0",
-        "nodemon": "^3.1.9",
         "npm": "^10.9.2",
-        "serverless-offline": "^14.4.0",
         "ts-node": "^10.9.2",
         "typescript": "^5.7.2"
     },
