--- a/buildspec.yml
+++ b/buildspec.yml
@@ -17,27 +17,12 @@ phases:
       - echo "Starting build..."
       - npm run build
       - cp -r dist IaC/cloudformation/dist
-      
       - mkdir -p packaged-templates
-
-      - aws cloudformation package \
-          --template-file IaC/cloudformation/network.yml \
-          --s3-bucket $S3_BUCKET \
-          --s3-prefix nested-templates \
-          --output-template-file packaged-templates/network.yml
-          
-      - aws cloudformation package \
-          --template-file IaC/cloudformation/compute-workers.yml \
-          --s3-bucket $S3_BUCKET \
-          --s3-prefix nested-templates \
-          --output-template-file packaged-templates/compute-workers.yml
       
-      - aws cloudformation package \
-          --template-file IaC/cloudformation/master.yml \
-          --s3-bucket $S3_BUCKET \
-          --s3-prefix root \
-          --output-template-file template-export.yml
+      - aws cloudformation package --template-file IaC/cloudformation/network.yml --s3-bucket $S3_BUCKET --s3-prefix nested-templates --output-template-file packaged-templates/network.yml
+      - aws cloudformation package --template-file IaC/cloudformation/compute-workers.yml --s3-bucket $S3_BUCKET --s3-prefix nested-templates --output-template-file packaged-templates/compute-workers.yml
       
+      - aws cloudformation package --template-file IaC/cloudformation/master.yml --s3-bucket $S3_BUCKET --s3-prefix root --output-template-file template-export.yml
       - echo "✓ Build completed"
       
   post_build:
