--- a/buildspec.yml
+++ b/buildspec.yml
@@ -14,16 +14,13 @@ phases:
       
   build:
     commands:
-      - echo "Starting build..."
-      - npm run build
-      - cp -r dist IaC/cloudformation/dist
-      - mkdir -p packaged-templates
-      
-      - aws cloudformation package --template-file IaC/cloudformation/network.yml --s3-bucket $S3_BUCKET --s3-prefix nested-templates --output-template-file packaged-templates/network.yml
-      - aws cloudformation package --template-file IaC/cloudformation/compute-workers.yml --s3-bucket $S3_BUCKET --s3-prefix nested-templates --output-template-file packaged-templates/compute-workers.yml
-      
-      - aws cloudformation package --template-file IaC/cloudformation/master.yml --s3-bucket $S3_BUCKET --s3-prefix root --output-template-file template-export.yml
-      - echo "✓ Build completed"
+      build:
+
+  commands:
+    - echo "Starting build..."
+    - npm run build
+    - cp -r dist IaC/cloudformation/dist
+    - aws cloudformation package --template-file IaC/cloudformation/master.yml --s3-bucket $S3_BUCKET --output-template-file template-export.yml
       
   post_build:
     commands:
